--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -10,6 +10,12 @@
 <div class="rooms">
   <div class="room">
     <div class="room-name">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
       <a href="#">techroom2</a>
     </div>
+  </div>
 </div>
